2014-10-17         John E. Malmberg      <wb8tyw@qsl.net>

	* config_h.com: Use sys$disk: instead of prj_root: for
	  copying the configure file.
	* gawk_alias_setup.com: Fix removal of out of date aliases.
	* vmsbuild.com: Fix a typo for symbol CNAME and a case sensitive
	  test for "VAX" .eq. "vax" that failed.  Also disable verify
	  while looking up the actual version.
	* vmstest.com: Make sure that the test directory exists when
	  using a search list.

2014-04-18         John E. Malmberg      <wb8tyw@qsl.net>

	* gawk_alias_setup.com: Fix problem with file links on Vax/VMS.

2014-04-08         Arnold D. Robbins     <arnold@skeeve.com>

	* 4.1.1: Release tar ball made.

2014-04-08         Arnold D. Robbins     <arnold@skeeve.com>

	* descrip.mms, vmsbuild.com: Update patchlevel.

2014-02-12         John E. Malmberg      <wb8tyw@qsl.net>

	* vmstest.com: (strftime) requires GNV Coreutils date command to run
	  (readdir) fix file cleanup to not generate warnings.

2014-01-21         John E. Malmberg      <wb8tyw@qsl.net>

	* generate_config_vms_h_gawk.com: upate copyright and fix exit status.

2014-01-17         John E. Malmberg      <wb8tyw@qsl.net>

	* vmstest.com (split_after_fpat): Added this test.

2014-01-03         John E. Malmberg      <wb8tyw@qsl.net>

	* config_h.com, generate_config_vms_h_gawk.com,
	  vms_args.c, vms_cli.c, vms_fwrite.c, vms_gawk.c, vms_misc.c,
	  vms_popen.c: Update copyright to 2014.
	* descrip.mms: Improve spotless cleanup.
	* vmstest.com: Improve test cleanup.
	* backup_gawk_src.com: New file. Create backup savesets for gawk source.
	* build_gawk_pcsi_desc.com: New file. Create a pcsi$desc manifest
	  file for building a gawk package.
	* build_gawk_pcsi_text.com: New file. Create a pcsi$text file for
	  building a gawk package.
	* build_gawk_release_notes.com: New file. Create a VMS release notes
	  file based on the gawk README and COPYING files and the release note
	  start and build instruction files.