@@ -1,4 +1,4 @@
-  Copyright (C) 2005, 2006, 2007, 2009, 2010, 2011, 2012, 2013, 2014
+  Copyright (C) 2005, 2006, 2007, 2009, 2010, 2011, 2012, 2013, 2014, 2015
   Free Software Foundation, Inc.
   
   Copying and distribution of this file, with or without modification,
@@ -7,7 +7,7 @@
 
 README:
 
-This is GNU Awk 4.1.1. It is upwardly compatible with Brian Kernighan's
+This is GNU Awk 4.1.2. It is upwardly compatible with Brian Kernighan's
 version of Unix awk.  It is almost completely compliant with the
 2008 POSIX 1003.1 standard for awk. (See the note below about POSIX.)
 
