@@ -51,7 +51,7 @@
 @c applies to and all the info about who's publishing this edition
 
 @c These apply across the board.
-@set UPDATE-MONTH February, 2015
+@set UPDATE-MONTH April, 2015
 @set VERSION 4.1
 @set PATCHLEVEL 2
 
