@@ -55,7 +55,7 @@ Changes from 4.1.1 to 4.1.2
     with the names of any functions. Gawk has checked for the former
     since 3.1.7. With --posix, it now also checks for the latter.
 
-XX. A number of bugs have been fixed. See the ChangeLog.
+13. A number of bugs have been fixed. See the ChangeLog.
 
 Changes from 4.1.0 to 4.1.1
 ---------------------------
