@@ -1,3 +1,7 @@
+2015-04-07         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* vmsbuild.com, descrip.mms: Bump patchlevel.
+
 2014-10-17         John E. Malmberg      <wb8tyw@qsl.net>
 
 	* config_h.com: Use sys$disk: instead of prj_root: for
